--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commitizen": "4.3.0",
     "compression": "1.7.4",
     "cz-conventional-changelog": "3.3.0",
+    "drizzle-kit": "^0.19.13",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "1.2.10",
     "prettier-plugin-tailwindcss": "0.5.4",
@@ -44,8 +45,11 @@
   "dependencies": {
     "@builder.io/qwik": "1.2.16",
     "@builder.io/qwik-city": "1.2.16",
+    "@neondatabase/serverless": "^0.6.0",
     "@tailwindcss/typography": "0.5.9",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.6",
     "marked": "^7.0.5",
     "number-abbreviate": "^2.0.0",
     "postcss": "8.4.27",
