--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "migrate": "drizzle-kit push:pg",
     "commit": "git-cz",
     "deploy": "vercel deploy",
     "dev": "vite --open --mode ssr --port 3000",
@@ -50,11 +51,14 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
+    "form-data": "^4.0.0",
     "jose": "^5.1.0",
+    "mailgun.js": "^9.3.0",
     "marked": "^7.0.5",
     "number-abbreviate": "^2.0.0",
     "postcss": "8.4.27",
     "prettier": "3.0.0",
+    "resend": "^2.0.0",
     "wc-toast": "1.3.0"
   },
   "config": {
